<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ten_label">10%</string>
    <string name="twenty_label">20%</string>
    <string name="thirty_label">30%</string>
    <string name="tip_label">Tip is:</string>
    <string name="enter_label">Enter Amount</string>

</resources>
