<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        
        android:hint="@string/enter_label"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn20"
        android:layout_alignBottom="@+id/btn20"
        android:layout_toRightOf="@+id/btn20"
        android:onClick="onTipClick"
        android:text="@string/thirty_label" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10"
        android:layout_alignBottom="@+id/btn10"
        android:layout_toRightOf="@+id/btn10"
        android:onClick="onTipClick"
        android:text="@string/twenty_label" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etAmount"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:onClick="onTipClick"
        android:text="@string/ten_label" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/tip_label" />

</RelativeLayout>